--- a/nglview/tests/notebooks/api/test_embed.ipynb
+++ b/nglview/tests/notebooks/api/test_embed.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "ef5d329138ec4f2c9e7fb8980918f3b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "32a7dbdddddf402ea5428787cbdd5879",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "704d262e56bb409b8444b6d2635f0bc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c45fd69ee48644fa9db5b1d850cc3489",
+       "model_id": "704d262e56bb409b8444b6d2635f0bc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,49 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state = view._get_embed_state()['state']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "msg = state['_ngl_msg_archive']\n",
-    "assert msg[-1]['methodName'] == 'updateNGLTheme'\n",
-    "assert 'color: #B8B8B8' in msg[-1]['args'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert msg[-1]['fire_embed'] == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nv.write_html(\"index.html\", [view, view], frame_range=(0, 2))\n",
-    "nv.write_html(\"index.html\", [view], frame_range=(0, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "nv.write_html(\"index.html\", [view, view], frame_range=(0, 2))\n",
     "!open index.html\n",
-    "\n",
     "# Make sure there are players and you can play them. \n",
     "# And they sync."
    ]
