--- a/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
+++ b/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
@@ -2,16 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eec00d02141e4ba98fa0180b3426b90c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Sidebar()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "caf4e096232f49fbad43772f5208d5c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>\\n.nglview-app{\\n    background: white\\n}\\n</style>\\n')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14986ac3aa724b47a19c608024e1b04b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Sidebar(), NGLWidget()), layout=Layout(grid_template_columns='350px auto'), _dom_classes=('n…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import nglview as nv\n",
     "from ipywidgets import *\n",
     "from IPython.display import display\n",
     "\n",
     "v = nv.demo()\n",
-    "s = nv.widget.Sidebar(v.model_id)\n",
+    "s = nv.widget.Sidebar()\n",
     "display(s)\n",
     "app = GridBox([s, v])\n",
     "app.layout.grid_template_columns = '350px auto'\n",
