--- a/nglview/tests/notebooks/api/test_custom_color.ipynb
+++ b/nglview/tests/notebooks/api/test_custom_color.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19f93e0172d34a3aa5eb546ea815a8c1",
+       "model_id": "69226e1429c64aa6a694998c4ffc3901",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1f2d64010bf4b5fa7bf988a1fdddff8",
+       "model_id": "1e5074179d69453cb52c223565e16835",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "becfed0464a34621a4581a629bc54af8",
+       "model_id": "dce43c147a7742f2a32f0cf61808c750",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nv.write_html('index.html', [v0, v1])\n",
+    "nv.write_html('index.html', [v0, v1])\n",
     "\n",
-    "# !open index.html\n",
+    "!open index.html\n",
     "# !google-chrome index.html\n",
     "\n",
     "# NOTE: If using master branch, make sure to copy nglview/static/index.js to <this folder>/nglview-js-widgets.js"
