--- a/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
+++ b/nglview/tests/notebooks/api/test_sidebar_widget.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eec00d02141e4ba98fa0180b3426b90c",
+       "model_id": "6f75d028768841fc953575097ecab7dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caf4e096232f49fbad43772f5208d5c6",
+       "model_id": "e099699f12b849478a87422a459d4bb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14986ac3aa724b47a19c608024e1b04b",
+       "model_id": "e54bc16c22e049c6a5b38483767cefe8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -87,11 +87,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1762ad9bc6a4b469dd1f8d407d10345",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fullscreen()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fs = nv.widget.Fullscreen(app, [v])\n",
     "fs"
@@ -99,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,24 +123,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ff7aff018bd4e68a2fa8eb01d4be9fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58a6458b06d44e1f992597b0513bbbf8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget(gui_style='ngl')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v2 = nv.demo()\n",
+    "v2.gui_style = 'ngl'\n",
+    "v2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    v._execute_js_code(\"\"\"\n",
-    "\n",
-    "    var cviews = this.options.parent.children_views.views\n",
-    "    console.log(cviews)\n",
-    "    var view = cviews[1]\n",
-    "    var sidebar = cviews[0]\n",
-    "    Promise.all([view, sidebar]).then((all) =>{\n",
-    "        var v = all[0]\n",
-    "        var s = all[1]\n",
-    "        console.log(v, s)\n",
-    "        s.setStage(v.stage)\n",
-    "    })\n",
-    "    \"\"\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
