--- a/nglview/tests/notebooks/api/test_custom_color.ipynb
+++ b/nglview/tests/notebooks/api/test_custom_color.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69226e1429c64aa6a694998c4ffc3901",
+       "model_id": "d59b24d5632943908d996e1f0fca698b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e5074179d69453cb52c223565e16835",
+       "model_id": "c5222f25d00c42a0987130ce4c48fa39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dce43c147a7742f2a32f0cf61808c750",
+       "model_id": "adac1872a635430bb6a329f622ecdc52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +137,31 @@
     "# !google-chrome index.html\n",
     "\n",
     "# NOTE: If using master branch, make sure to copy nglview/static/index.js to <this folder>/nglview-js-widgets.js"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "84e6216236a94b4bbd52b339e662ccba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v1.gui_style = 'ngl'\n",
+    "v1._widget_theme.dark()"
    ]
   }
  ],
