--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -2,13 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c48f1f9c425343e5b9539ba51572e93f",
+       "model_id": "87fb2ea1b52042d8b9232e5b6caa3474",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5686908bea454a3182843369b0b84e60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ThemeManager()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70dce06c69d54e9b9e523290361b5976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20424:20468:0805/113724.402034:ERROR:browser_process_sub_thread.cc(221)] Waited 3 ms for network service\r\n",
+      "[24364:24393:0805/114918.921144:ERROR:browser_process_sub_thread.cc(221)] Waited 5 ms for network service\r\n",
       "Opening in existing browser session.\r\n"
      ]
     }
