--- a/notebooks/gui.ipynb
+++ b/notebooks/gui.ipynb
@@ -107,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "view._widget_theme._js(\"\"\"console.log(this)\"\"\")"
+    "view._widget_theme._js(\"\"\"console.log(this.model.widget_manager._models)\"\"\")"
    ]
   },
   {
