--- a/nglview/tests/notebooks/api/test_sync_view.ipynb
+++ b/nglview/tests/notebooks/api/test_sync_view.ipynb
@@ -2,9 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac3e832f53e94d7b9dfdbe1145a48ea9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06b778c687534d77bc27fe251746d4fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ThemeManager()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fe92ecb83424dc7a17259cb08b466b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget(gui_style='ngl')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import nglview as nv\n",
     "from ipywidgets import GridBox\n",
@@ -49,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4b1f06feab440118d474644db6f194d",
+       "model_id": "7fe92ecb83424dc7a17259cb08b466b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f284095320e423d997a311376842d7d",
+       "model_id": "ea8b17e9e56d47d5bb5e8dcb067606fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +166,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ad499cbfb944bb4b74646b7c0810ff2",
+       "model_id": "4f39f29e4e2840918ade3903cfdf779f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ad499cbfb944bb4b74646b7c0810ff2",
+       "model_id": "4f39f29e4e2840918ade3903cfdf779f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +235,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f1e6d870b1f471fb74f560352527ae8",
+       "model_id": "bc5f6dbe5395461db8241fea7f6ed640",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +275,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cb3292e8d4e45b9a95d2d0545435c3d",
+       "model_id": "3ed76ce3655c4124932ef5594fc6bcc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -266,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f95f4a264e024b928f09a8dd6f433f36",
+       "model_id": "e14fd7c9f7bf49d688d7031a7e6bffee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f1e6d870b1f471fb74f560352527ae8",
+       "model_id": "bc5f6dbe5395461db8241fea7f6ed640",
        "version_major": 2,
        "version_minor": 0
       },
