--- a/nglview/tests/notebooks/api/test_embed.ipynb
+++ b/nglview/tests/notebooks/api/test_embed.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0f0a5852c5440429e17409cbf2431c7",
+       "model_id": "4dcfea79fe1e4484ba005c8347f2258b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,12 +22,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5770be74df5c489fb1b825fb03668542",
+       "model_id": "fe095fabeb054950a5ab882b049cb7f0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='')"
+       "ThemeManager()"
       ]
      },
      "metadata": {},
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6331049ed6cf41ea99c41cf58a10d850",
+       "model_id": "8dd20e7f41854d80b900c96cd4e32234",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,7 +105,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6331049ed6cf41ea99c41cf58a10d850",
+       "model_id": "8dd20e7f41854d80b900c96cd4e32234",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,10 +153,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30701:30725:0805/134837.429296:ERROR:browser_process_sub_thread.cc(221)] Waited 3 ms for network service\r\n",
+      "Opening in existing browser session.\r\n"
+     ]
+    }
+   ],
    "source": [
     "nv.write_html(\"index.html\", [view, view], frame_range=(0, 2))\n",
-    "!open index.html\n",
+    "# !open index.html\n",
+    "!google-chrome index.html\n",
     "# Make sure there are players and you can play them. \n",
     "# And they sync."
    ]
