--- a/nglview/tests/notebooks/api/test_gui_theme.ipynb
+++ b/nglview/tests/notebooks/api/test_gui_theme.ipynb
@@ -9,9 +9,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6994e2dd3a904315a7f5f39620b8e066",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d36d5d50901c437e87c77ab82dd76edd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ThemeManager()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from nglview.theme import ThemeManager\n",
     "\n",
@@ -21,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f18fefbdbf54d23bc6ecc63bd87b939",
+       "model_id": "9221c5e9196444f39ba4cf9ce034faf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e551f39e24f345f8b6a11f871bd87363",
+       "model_id": "0fb4af27aeff4b14bb83b1b455f1557e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,11 +124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5338652366d1451faf333c73b04a8f0b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget(gui_style='ngl')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "m.light()"
+    "v = nv.demo()\n",
+    "v.gui_style = 'ngl'\n",
+    "v._gui_theme = 'light'\n",
+    "v"
    ]
   }
  ],
