--- a/nglview/tests/notebooks/api/test_embed.ipynb
+++ b/nglview/tests/notebooks/api/test_embed.ipynb
@@ -2,13 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c45fd69ee48644fa9db5b1d850cc3489",
+       "model_id": "4dcfea79fe1e4484ba005c8347f2258b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe095fabeb054950a5ab882b049cb7f0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ThemeManager()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8dd20e7f41854d80b900c96cd4e32234",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c45fd69ee48644fa9db5b1d850cc3489",
+       "model_id": "8dd20e7f41854d80b900c96cd4e32234",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,53 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30701:30725:0805/134837.429296:ERROR:browser_process_sub_thread.cc(221)] Waited 3 ms for network service\r\n",
+      "Opening in existing browser session.\r\n"
+     ]
+    }
+   ],
    "source": [
-    "state = view._get_embed_state()['state']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "msg = state['_ngl_msg_archive']\n",
-    "assert msg[-1]['methodName'] == 'updateNGLTheme'\n",
-    "assert 'color: #B8B8B8' in msg[-1]['args'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert msg[-1]['fire_embed'] == True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# nv.write_html(\"index.html\", [view, view], frame_range=(0, 2))\n",
-    "nv.write_html(\"index.html\", [view], frame_range=(0, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!open index.html\n",
-    "\n",
+    "nv.write_html(\"index.html\", [view, view], frame_range=(0, 2))\n",
+    "# !open index.html\n",
+    "!google-chrome index.html\n",
     "# Make sure there are players and you can play them. \n",
     "# And they sync."
    ]
