--- a/nglview/tests/notebooks/api/test_gui_theme.ipynb
+++ b/nglview/tests/notebooks/api/test_gui_theme.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6994e2dd3a904315a7f5f39620b8e066",
+       "model_id": "d3c1a1b071c7408696981bd6506b52e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,7 +31,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d36d5d50901c437e87c77ab82dd76edd",
+       "model_id": "9842e1da10854f28a770ebe08b41cd06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,7 +58,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9221c5e9196444f39ba4cf9ce034faf0",
+       "model_id": "2e4c8d5f17fc4772b9cd3e42cbd4cd61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fb4af27aeff4b14bb83b1b455f1557e",
+       "model_id": "1234378b50ca4c81bb946ff7bde2d7a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5338652366d1451faf333c73b04a8f0b",
+       "model_id": "3b7d54320abd4f259e8b26297c1364ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,6 +147,71 @@
     "v.gui_style = 'ngl'\n",
     "v._gui_theme = 'light'\n",
     "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v.gui_style = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Original GUI style (ipywidgets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "455de3f1b70041c189a75116ee6afc36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget(gui_style='ngl')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v2 = nv.demo()\n",
+    "v2.display(gui=True) # NGL style"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00162feca1cc466099a66c426e85d021",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(NGLWidget(n_components=1), Tab(children=(Box(children=(Box(children=(Box(children=(Label(value=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "v2.display(gui=True, style='ipywidgets')"
    ]
   }
  ],
