use async syntax

--- a/nglview/tests/notebooks/api/test_custom_color.ipynb
+++ b/nglview/tests/notebooks/api/test_custom_color.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3246c0486af445e3a53eb3c0505395f4",
+       "model_id": "cf6d73336cd54b7ebef2398a1cab0819",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "797735f9a3c54bf4aa00b5c149b33d53",
+       "model_id": "4b2c1c6b5ab24086a084121cffb929e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "466d9787b8da4cdcac95cac7c0d6871c",
+       "model_id": "11450f88fa504a11bfc0362f7084f444",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +133,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c24784dbf6e48f0a4c0c8bf5dbaaced",
+       "model_id": "0f1d8786494f427885964c0fa6837f95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[31314:31337:0805/134956.104131:ERROR:browser_process_sub_thread.cc(221)] Waited 3 ms for network service\n",
-      "Opening in existing browser session.\n"
+      "[14540:14566:0809/163105.033274:ERROR:browser_process_sub_thread.cc(221)] Waited 3 ms for network service\r\n",
+      "Opening in existing browser session.\r\n"
      ]
     }
    ],
