--- a/notebooks/rdkit_smiles_3d.ipynb
+++ b/notebooks/rdkit_smiles_3d.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "708bae9b352f457fb2ddac3002e700be",
+       "model_id": "b82d4dc35d674d9c8d6e7f2fd3f733a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,13 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f6456b70b5b44a4b717822c30fda37e",
+       "model_id": "90e65965ee5f4615815a3b75d3de00b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6057e172653d4603afa7b981d4d9091a",
+       "model_id": "d8601aaea6714d9cbeb02bfae768c48a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,27 +84,36 @@
     "import nglview as nv\n",
     "from IPython.display import display\n",
     "from nglview.widget import Fullscreen\n",
-    "from ipywidgets import Text, Button, AppLayout, VBox, HBox, Output, GridspecLayout\n",
+    "from ipywidgets import Text, Button, AppLayout, VBox, HBox, Output, GridspecLayout, Checkbox, Image\n",
     "import nglview as nv\n",
     "from rdkit import Chem # doctest: +SKIP\n",
     "from rdkit.Chem import AllChem\n",
     "from rdkit import Chem\n",
+    "from rdkit.Chem import Draw\n",
+    "from rdkit.Chem import rdDepictor\n",
+    "from rdkit.Chem.Draw import rdMolDraw2D\n",
+    "from io import BytesIO\n",
     "\n",
     "\n",
     "class SmilesView(AppLayout):\n",
     "    def __init__(self, *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        self.view = nv.NGLWidget()\n",
-    "        # self.view.gui_style = 'ngl'\n",
+    "        self.view.gui_style = 'ngl'\n",
+    "        self.view.background = 'black'\n",
     "        self.text = Text()\n",
     "        btn = Button(description='Generate')\n",
     "        btn_fs = Button(description='Fullscreen')\n",
     "        self.center = self.view\n",
     "        self._out = Output()\n",
+    "        self._err = Output()\n",
     "        self._check = Checkbox(description='Replace', value=True)\n",
     "        bgen = VBox([self.text, self._out])\n",
     "        bfull = VBox([btn, btn_fs])\n",
     "        footer = self.footer = HBox([bgen, bfull])\n",
+    "        self.left_sidebar = lbar = Image()\n",
+    "        self.left_sidebar.layout.align_self = 'center'\n",
+    "        lbar.layout.display = 'none'\n",
     "        self._fs = Fullscreen(self, [self.view])\n",
     "        self.footer.layout.justify_content = 'center'\n",
     "        display(self._fs)\n",
@@ -114,21 +125,31 @@
     "        @btn_fs.on_click\n",
     "        def on_click_fs(_):\n",
     "            self._fs.fullscreen()\n",
+    "        \n",
+    "        self.on_displayed(self.display_callback)\n",
+    "        \n",
+    "    def display_callback(self, _):\n",
+    "        s.layout.height = '600px'\n",
+    "        s.view.handle_resize()\n",
     "            \n",
     "    def _handle_smiles_changed(self):\n",
     "        self._out.clear_output()\n",
+    "        self._err.clear_output()\n",
     "        st = None\n",
-    "        with Output() as out2:\n",
+    "        with self._err:\n",
     "            m = Chem.MolFromSmiles(self.text.value)\n",
+    "            print(type(m))\n",
     "            m = Chem.AddHs(m)\n",
+    "            print(type(m))\n",
     "            Chem.AllChem.EmbedMultipleConfs(m, useExpTorsionAnglePrefs=True, useBasicKnowledge=True)\n",
+    "            self.left_sidebar.value = m._repr_png_()\n",
+    "            self.left_sidebar.layout.display = 'flex'\n",
     "            st = nv.RdkitStructure(m)\n",
     "\n",
     "        if st:\n",
     "            if self._check.value:\n",
     "                if self.view.n_components > 0:\n",
     "                    for c in self.view:\n",
-    "                        print(c.id)\n",
     "                        self.view.remove_component(c)\n",
     "            self.view.add_component(st)\n",
     "        else:\n",
@@ -137,7 +158,7 @@
     "s = SmilesView()\n",
     "s.add_class('smilesApp')\n",
     "# smiles example:\n",
-    "# Cc1ccccc1\n",
+    "# COc1ccc2[C@H](O)[C@@H](COc2c1)N3CCC(O)(CC3)c4ccc(F)cc4\n",
     "s"
    ]
   }
