--- a/notebooks/rdkit_smiles_3d.ipynb
+++ b/notebooks/rdkit_smiles_3d.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -54,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90e65965ee5f4615815a3b75d3de00b0",
+       "model_id": "d47efe5ac6f146aebf115feb30f1fe86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -68,7 +68,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8601aaea6714d9cbeb02bfae768c48a",
+       "model_id": "fdcaf88e30074fd9a8d010495bae29e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     "        self._fs = Fullscreen(self, [self.view])\n",
     "        self.footer.layout.justify_content = 'center'\n",
     "        display(self._fs)\n",
-    "        \n",
+    "        self._m = None\n",
     "        @btn.on_click\n",
     "        def on_click_smiles(_):\n",
     "            self._handle_smiles_changed()\n",
@@ -145,13 +145,17 @@
     "            self.left_sidebar.value = m._repr_png_()\n",
     "            self.left_sidebar.layout.display = 'flex'\n",
     "            st = nv.RdkitStructure(m)\n",
+    "            self._m = m\n",
+    "            self._rdm = st\n",
     "\n",
     "        if st:\n",
-    "            if self._check.value:\n",
-    "                if self.view.n_components > 0:\n",
-    "                    for c in self.view:\n",
-    "                        self.view.remove_component(c)\n",
-    "            self.view.add_component(st)\n",
+    "            if self.view.n_components == 0:\n",
+    "                self.view.add_component(st, default=False)\n",
+    "                self.view.add_licorice('/0')\n",
+    "                self.view.center()\n",
+    "            else:\n",
+    "                struct = dict(data=st.get_structure_string(), ext='pdb')\n",
+    "                self.view._remote_call('replaceStructure', args=[struct])\n",
     "        else:\n",
     "            self._out.append_stdout(\"ERROR: bad input\")\n",
     "        \n",
@@ -160,6 +164,38 @@
     "# smiles example:\n",
     "# COc1ccc2[C@H](O)[C@@H](COc2c1)N3CCC(O)(CC3)c4ccc(F)cc4\n",
     "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<rdkit.Chem.rdchem.Conformer at 0x111d2e1c0>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c0 = s._m.GetConformer()\n",
+    "c0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c0.Set3D"
    ]
   }
  ],
